--- a/js/package.json
+++ b/js/package.json
@@ -3,8 +3,9 @@
         "test": "jest"
     },
     "devDependencies": {
+        "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "jest-localstorage-mock": "^2.4.26",
         "jsdom": "^23.0.1"
     }
-}
+    }
